<resources>
    <string name="app_name">Tulip</string>
    <string name="bienvenidos">¡BIENVENIDOS!</string>
    <string name="bienv_tulip">¡BIENVENIDOS A TULIP!</string>
    <string name="registrar">Registrar</string>
    <string name="ingresar">Ingresar</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="conf_contra">Confirmar contraseña</string>
    <string name="genero">Género</string>
    <string name="masc">Masculino</string>
    <string name="fem">Femenino</string>


</resources>