<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple1"
    android:orientation="vertical"
    tools:context=".MainActivityLogin">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background_login"
        android:layout_width="wrap_content"
        android:layout_height="436dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="275dp"
        android:background="@drawable/bg_circle3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".90"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">

        <ImageView
            android:id="@+id/logo_tulipv2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/tulipv2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.066" />

        <TextView
            android:id="@+id/lbl_bienvenidos"
            android:layout_width="195dp"
            android:layout_height="39dp"
            android:fontFamily="@font/neueremansans_regular"
            android:text="@string/bienvenidos"
            android:textAlignment="center"
            android:textColor="@color/purple2"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_tulipv2"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_login"
            android:layout_width="365dp"
            android:layout_height="280dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_bienvenidos"
            app:layout_constraintVertical_bias="0.21">

            <TextView
                android:id="@+id/lbl_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neueremansans_regular"
                android:text="@string/usuario"
                android:textColor="@color/purple1"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.200" />

            <EditText
                android:id="@+id/txt_usuario"
                android:layout_width="301dp"
                android:layout_height="48dp"
                android:fontFamily="@font/neueremansans_regular"
                android:textColor="@color/purple2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_usuario"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/lbl_contraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neueremansans_regular"
                android:text="@string/contraseña"
                android:textColor="@color/purple1"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_usuario"
                app:layout_constraintVertical_bias="0.200" />

            <EditText
                android:id="@+id/txt_contraseña"
                android:layout_width="297dp"
                android:layout_height="48dp"
                android:fontFamily="@font/neueremansans_regular"
                android:textColor="@color/purple2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="0.426"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_contraseña"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/background_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="86dp"
        android:layout_marginTop="-160dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="114dp"
        android:backgroundTint="@color/lime1"
        android:fontFamily="@font/neueremansans_regular"
        android:gravity="center"
        android:text="@string/ingresar"
        android:textColor="@color/purple1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lbl_login_aActivitySignup"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_below="@+id/btn_ingresar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="-80dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/neueremansans_regular"
        android:text="¿No tienes cuenta? ¡Registrate!"
        android:textAlignment="center"
        android:textColor="@color/lime1"
        android:textSize="14sp" />


</RelativeLayout>