<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple2"
    tools:context=".MainActivitySign_up">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="528dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="183dp"
        android:background="@drawable/bg_circle3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".90"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">

        <ImageView
            android:id="@+id/logo_tulipv1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/tulipv1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.066" />

        <TextView
            android:id="@+id/lbl_sign_up"
            android:layout_width="131dp"
            android:layout_height="38dp"
            android:fontFamily="@font/neueremansans_regular"
            android:text="@string/registrar"
            android:textAlignment="center"
            android:textColor="@color/purple1"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_tulipv1"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_login"
            android:layout_width="358dp"
            android:layout_height="330dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_sign_up"
            app:layout_constraintVertical_bias="0.216">

            <TextView
                android:id="@+id/lbl_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neueremansans_regular"
                android:text="@string/usuario"
                android:textColor="@color/purple1"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.104"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.108" />


            <EditText
                android:id="@+id/txt_usuario"
                android:layout_width="302dp"
                android:layout_height="43dp"
                android:fontFamily="@font/neueremansans_regular"
                android:textColor="@color/purple2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.525"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_usuario"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/lbl_conf_contra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neueremansans_regular"
                android:text="@string/conf_contra"
                android:textColor="@color/purple1"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.145"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_contraseña"
                app:layout_constraintVertical_bias="0.200" />

            <EditText
                android:id="@+id/txt_conf_contra"
                android:layout_width="302dp"
                android:layout_height="38dp"
                android:fontFamily="@font/neueremansans_regular"
                android:textColor="@color/purple2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.525"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_conf_contra"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/lbl_contraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neueremansans_regular"
                android:text="@string/contraseña"
                android:textColor="@color/purple1"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.104"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_usuario"
                app:layout_constraintVertical_bias="0.108" />

            <EditText
                android:id="@+id/txt_contraseña"
                android:layout_width="303dp"
                android:layout_height="42dp"
                android:fontFamily="@font/neueremansans_regular"
                android:textColor="@color/purple2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.525"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_contraseña"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/lime1"
        android:fontFamily="@font/neueremansans_regular"
        android:gravity="center"
        android:text="@string/registrar"
        android:textColor="@color/purple1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lbl_signup_aActivityLogin"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_below="@+id/btn_registrar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="-76dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/neueremansans_regular"
        android:text="¿Tienes cuenta? ¡Ingresa!"
        android:textAlignment="center"
        android:textColor="@color/purple1"
        android:textSize="14sp" />


</RelativeLayout>